2016-05-22  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* tool/dttrainer/main.cpp:
	* tool/dttrainer/trainer.cpp:
	* tool/dttrainer/trainer.h:
	- 三角形分割フォーメーションの学習機能と入出力をほぼ実装．

2016-05-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* tool/dttrainer/Makefile.am:
	* tool/dttrainer/main.cpp:
	* tool/dttrainer/memo:
	* tool/dttrainer/trainer.cpp:
	* tool/dttrainer/trainer.h:
	* configure.ac:
	* tool/Makefile.am:
	- 三角形分割フォーメーションモデルを用いた学習プログラムを追加。実
	装途中。

	* m4/qt.m4:
	- OSX環境での不具合に対応

2015-07-18  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/edit_data.cpp:
	- 自動バックアップのファイル名書式を変更

2015-07-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* tool/average_formation.cpp:
	- 平均フォーメーションにベースのRoleTypeとMarkerをセットしていなかっ
	た不具合を修正

2014-07-08  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/edit_data.cpp:
	* src/edit_data.h:
	* src/edit_dialog.cpp:
	* src/edit_dialog.h:
	- 編集ダイアログに役割タイプを設定するコンボボックスを追加

2014-07-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/edit_data.cpp:
	* src/edit_data.h:
	* src/edit_dialog.cpp:
	* src/edit_dialog.h:
	- 編集ダイアログにマーク行動の割当を選択できるチェックボックスを追加

2013-06-22  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/config_dialog.cpp:
	* src/config_dialog.h:
	* src/edit_canvas.cpp:
	* src/main_window.cpp:
	* src/options.cpp:
	* src/options.h:
	- フィールド描画のスケールをコンフィグダイアログ上で設定できるように機能追加

2013-06-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/config_dialog.cpp:
	* src/config_dialog.h:
	* src/Makefile.am:
	* src/edit_canvas.cpp:
	* src/main.cpp:
	* src/main_window.cpp:
	* src/main_window.h:
	* src/options.cpp:
	* src/options.h:
	- ConfigDialogを追加
	- フィールドの表示サイズを指定できるように機能追加

2013-05-25  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/edit_data.cpp:
	- Data Auto Selectをオフにした場合，X軸にボールが吸い付く機能もオ
	フにするように変更

	* src/edit_canvas.cpp:
	- ゴールポストを追加

	* src/edit_data.cpp:
	- 自動バックアップのファイル名フォーマットを変更

2012-06-05  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/edit_canvas.cpp:
	- シュートコース表示用のゴール幅を-0.1
